# job-hunter

./: .gitignore  CLAUDE.md  README.md  kind-config.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ca66826bbdde_create_companies_jobs_saved_searches_.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/api/: jobs.py
backend/app/sources/: greenhouse.py
backend/pollers/: poll_all.py
docs/: PLAN.md
docs/manual/: 01-frontend-scaffold.md  02-filter-controls.md  03-containerize-deploy.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: FilterBar.tsx  JobCard.tsx  JobDetail.tsx  JobList.tsx
k8s/: namespace.yaml
k8s/backend/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
k8s/cronjobs/: poll-greenhouse.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/postgres/: secret.yaml  service.yaml  statefulset.yaml
